--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
         </a>
         <nav>
             <ul>
-                <li><a href="Menu.html">Menu</a></li>
-                <li><a href="Contact.html">Contact Us</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
         <div class="header-buttons">
